Añdadida más funcionalidad

--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
                   <div class="card-footer">
                       <button type="button" class="btn btn-secondary" id="card-button">Ir</button>
                   </div>
+                </div>
               </div>
               <div class="card card-inverse card-info" id="Desayuno con compañeros">
                   <img class="card-img-top" src="./img/evento.jpg" alt="Imagen del evento">
