--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link href="./css/style.css" rel="stylesheet">
+  <script src="./js/session.js"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
@@ -35,31 +36,31 @@
               <div class="input-group-append">
                 <span class="input-group-text"><i class="fas fa-user"></i></span>
               </div>
-              <input type="text" name="" class="form-control input_user" value="" placeholder="username" required>
+              <input id="username" ype="text" name="" class="form-control input_user" value="" placeholder="Nombre Usuario" required>
             </div>
             <div class="input-group mb-2">
               <div class="input-group-append">
                 <span class="input-group-text"><i class="fas fa-key"></i></span>
               </div>
-              <input type="password" name="" class="form-control input_pass" value="" placeholder="password" required>
+              <input type="password" name="" class="form-control input_pass" value="" placeholder="Contraseña" required>
             </div>
             <div class="form-group">
               <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" id="customControlInline">
-                <label class="custom-control-label" for="customControlInline">Remember me</label>
+                <input id="recuerdame" type="checkbox" class="form-check-input" checked>
+                <label class="label" for="customControlInline">Recuérdame</label>
               </div>
             </div>
           </form>
         </div>
         <div class="d-flex justify-content-center mt-3 login_container">
-          <button type="submit" name="button" class="btn btn-outline-secondary" form="formulario">Login</button>
+          <button type="submit" name="button" class="btn btn-outline-secondary" onclick="setName()" form="formulario">Iniciar sesión</button>
         </div>
         <div class="mt-4">
           <div class="d-flex justify-content-center links">
-            Don't have an account? <a href="#" class="ml-2">Sign Up</a>
+            ¿No tienes una cuenta? <a href="#" class="ml-2">Regístrate</a>
           </div>
           <div class="d-flex justify-content-center links">
-            <a href="#">Forgot your password?</a>
+            <a href="#">¿Olvidaste tu contraseña?</a>
           </div>
         </div>
       </div>
@@ -68,22 +69,22 @@
 
 
 
-          <div class="footer" id="footer">
-              <div class="row" id="company">
-                <p>
-                    J&G Diseñadores
-                </p>
-              </div>
-              <div class="form-group mx-sm-4 mb-2" id="company">
-                <p>
-                  <a id="footer-item" href="#">Contáctanos</a>
-                  <a id="footer-item" href="#">Quiénes somos</a>
-                  <a id="footer-item" href="#">Acerca de</a>
-                  <a id="footer-item" href="#">Preguntas frecuentes</a>
-                </p>
-              </div>
-            
-          </div>
+  <div class="footer" id="footer">
+      <div class="row" id="company">
+        <p>
+            J&G Diseñadores
+        </p>
+      </div>
+      <div class="form-group mx-sm-4 mb-2" id="company">
+        <p>
+          <a id="footer-item" href="#">Contáctanos</a>
+          <a id="footer-item" href="#">Quiénes somos</a>
+          <a id="footer-item" href="#">Acerca de</a>
+          <a id="footer-item" href="#">Preguntas frecuentes</a>
+        </p>
+      </div>
+    
+  </div>
 
   </body>
 </html>
