--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <script src="./js/collapseBehaviour.js"></script>
   <script src="./js/searchBehaviour.js"></script>
+  <script src="./js/imagenBehaviour.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
@@ -150,8 +151,7 @@
             </h1>
             <div id="eventos">
               <div class="card card-inverse card-info" id="Pesca">
-                  <div class="card-block">
-                    <img class="card-img-top" src="./img/evento.jpg" alt="Imagen del evento">
+                  <img class="card-img-top" src="./img/evento.jpg" alt="Imagen del evento">
                       <h4 class="card-title">Pesca</h4>
                       <div class="card-text">
                           Lorem Rajoy Ipsum los vecinos el alcalde y es el alcalde el que quiere que sean viva el vino. A veces es mejor estar quieto y en otras no y mucho españoles y es el alcalde el que quiere que sean viva el vino A veces moverse es bueno, otras veces no y cuanto peor para todos mejor ¿Ustedes piensan antes de hablar o hablan tras pensar? ¿Ustedes piensan antes de hablar o hablan tras pensar? una cosa es ser solidario y otra es serlo a cambio de nada. Y es el alcalde el que quiere que sean como ustedes comprenderán exportar es positivo porque vendes lo que produces it's very difficult todo esto somos sentimientos y tenemos seres humanos los chuches viva el vino y cuanto peor para todos mejor. ¿Y la europea? no fue cosa menor viva el vino los españoles son muy españoles ¿Y la europea? fin de la cita ¿Y la europea?. Como decía Galileo, el movimiento siempre se acelera cuando se va detener esto no es como el agua que cae del cielo sin que se sepa exactamente por qué ¿eh? no fue cosa menor una cosa es ser solidario y otra es serlo a cambio de nada luego ya veremos muy españoles y mucho españoles muy españoles y mucho españoles. Como ustedes comprenderán viva el vino somos sentimientos y tenemos seres humanos grave afrenta a la estabilidad de los catalanes hacen cosas lo he escrito aquí y no entiendo mi letra ¿Y la europea? viva el vino fin de la cita. Los vecinos el alcalde lo he escrito aquí y no entiendo mi letra ¿eh? esto no es como el agua que cae del cielo sin que se sepa exactamente por qué ¿eh? mucho españoles salvo algunas cosas no es cosa menor, dicho de otra manera, es cosa mayor lo he escrito aquí y no entiendo mi letra. Somos sentimientos y tenemos seres humanos los catalanes hacen cosas viva el vino muy españoles y mucho españoles lo más importante que se puede hacer por vosotros es lo que vosotros podáis hacer por nosotros es el vecino el que elije al alcalde no fue cosa menor y es el alcalde el que quiere que sean.
@@ -160,8 +160,8 @@
                   <div class="card-footer">
                       <button type="button" class="btn btn-secondary" id="card-button">Ir</button>
                   </div>
-                </div>
               </div>
+
               <div class="card card-inverse card-info" id="Desayuno con compañeros">
                   <img class="card-img-top" src="./img/evento.jpg" alt="Imagen del evento">
                       <h4 class="card-title">Desayuno con compañeros</h4>
@@ -196,7 +196,32 @@
               </div>
             </div>
           </div>
-        </div>
+
+          <div class="container">
+            <h1 class="thick-heading">
+              Eventos relacionados
+            </h1>
+
+            <div class="gallery" id="gallery">
+
+              <!-- Grid column -->
+              <div class="mb-3 pics animation all 2">
+                <img class="eventos-relacionados" src="./img/evento.jpg" alt="Imagen de Evento">
+
+                <img class="eventos-relacionados" src="./img/evento.jpg" alt="Imagen de Evento">
+
+                <img class="eventos-relacionados" src="./img/evento.jpg" alt="Imagen de Evento">
+
+                <img class="eventos-relacionados" src="./img/evento.jpg" alt="Imagen de Evento">
+
+                <img class="eventos-relacionados" src="./img/evento.jpg" alt="Imagen de Evento">
+
+                <img class="eventos-relacionados" src="./img/evento.jpg" alt="Imagen de Evento">                
+              </div>
+              <!-- Grid column -->
+
+            </div>
+          </div>
 
           <div class="footer" id="footer">
               <div class="row" id="company">
