Actualizado con scroll

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <script src="./js/collapseBehaviour.js"></script>
   <script src="./js/searchBehaviour.js"></script>
+  <script src="./js/imagenBehaviour.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
@@ -63,7 +64,7 @@
                                 </td>
                                 <td class="agenda-events">
                                     <div class="agenda-event">
-                                        <i class="glyphicon glyphicon-repeat text-muted" title="Repeating event"></i>  Pesca
+                                      <a href="#Pesca">Pesca</a> 
                                     </div>
                                 </td>
                             </tr>
@@ -80,7 +81,7 @@
                                 </td>
                                 <td class="agenda-events">
                                     <div class="agenda-event">
-                                        Desayuno con compañeros
+                                        <a href="#Desayuno con compañeros">Desayuno con compañeros</a>
                                     </div>
                                 </td>
                             </tr>
@@ -90,7 +91,7 @@
                                 </td>
                                 <td class="agenda-events">
                                     <div class="agenda-event">
-                                        Charla sobre Bootstrap
+                                        <a href="#Charla sobre Bootstrap">Charla sobre Bootstrap</a>
                                     </div>
                                 </td>
                             </tr>
@@ -100,7 +101,7 @@
                                 </td>
                                 <td class="agenda-events">
                                     <div class="agenda-event">
-                                        Conferencia de HTML5
+                                        <a href="#Conferencia de HTML5">Conferencia de HTML5</a>
                                     </div>
                                 </td>
                             </tr>
